# ai-tourist-guide

./: .gitignore  CLAUDE.md  README.md  tour_guide_app_plan.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/db/: __init__.py  models.py
backend/app/routers/: auth.py  chat.py  cities.py  identify.py
backend/app/services/: cache.py  embeddings.py
backend/infrastructure/terraform/: backend.tf  lambda.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
backend/infrastructure/terraform-ecr/: backend.tf  main.tf  provider.tf  variables.tf
backend/infrastructure/terraform/modules/api_gateway/: main.tf  outputs.tf  variables.tf
backend/infrastructure/terraform/modules/dynamodb/: main.tf  outputs.tf
backend/infrastructure/terraform/modules/iam/: main.tf  (+1 more)
backend/infrastructure/terraform/rotation/: rotate.py
backend/src/app/: config.py  main.py
backend/src/app/middleware/: __init__.py
backend/src/app/models/: itinerary.py  request.py  response.py
backend/src/app/prompts/: templates.py
backend/src/app/routers/: auth.py  health.py  itinerary.py
backend/src/app/services/: auth_service.py  cache_service.py  claude_service.py  credits_service.py  itinerary_service.py  rate_limiter.py  route_optimizer.py
backend/tests/: conftest.py  test_claude_service.py  test_health.py  test_itinerary.py
pack_builder/: README.md  pyproject.toml
pack_builder/scripts/: 01_fetch_pois.py  02_fetch_images.py  03_generate_text.py  04_compute_embeddings.py  05_package.py
(+48 files in other folders)
