[project]
name = "tripcraft-ai-backend"
version = "0.1.0"
description = "AI-powered suggestion generator backend"
readme = "README.md"
authors = [
    { name = "ehsan tafehi", email = "ehsan.tafehi@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.101.0",
    "boto3>=1.43.6",
    "fastapi>=0.136.1",
    "mangum>=0.21.0",
    "pydantic-settings>=2.14.1",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "moto>=5.0",
    "ruff>=0.15.12",
    "mypy>=2.1.0",
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
