[project]
name = "locallore-pack-builder"
version = "0.1.0"
description = "City pack build pipeline for LocalLore"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "Pillow>=10.0",
    "open-clip-torch>=2.24",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
